improved summary calendar visibility if it's position is fixed.

--- a/insights/src/app/shared/components/visualisations/summary-calendar/summary-calendar.component.scss
+++ b/insights/src/app/shared/components/visualisations/summary-calendar/summary-calendar.component.scss
@@ -38,6 +38,8 @@ $marker-offset: 2px;
 }
 
 .summary-calendar{
+  background-color: white;
+  border-radius: 5px;
   display: flex;
   flex-direction: row;
   user-select: none;
